// Vitest Snapshot v1

exports[`OpenLayerMapPointViewer > Render correctly - with the passed props 1`] = `
"<ol-map load-tiles-while-animating=\\"true\\" load-tiles-while-interacting=\\"true\\" style=\\"height: 400px;\\">
  <ol-view center=\\"35.7040744,139.5577317\\" rotation=\\"0\\" zoom=\\"17\\" projection=\\"EPSG:4326\\"></ol-view>
  <ol-tile-layer>
    <ol-source-osm></ol-source-osm>
  </ol-tile-layer>
  <ol-vector-layer>
    <ol-source-vector>
      <ol-feature>
        <ol-geom-multi-point coordinates=\\"35.7040744,139.5577317\\"></ol-geom-multi-point>
        <ol-style>
          <ol-style-circle radius=\\"10\\">
            <ol-style-fill color=\\"white\\"></ol-style-fill>
            <ol-style-stroke color=\\"blue\\" width=\\"4\\"></ol-style-stroke>
          </ol-style-circle>
        </ol-style>
      </ol-feature>
    </ol-source-vector>
  </ol-vector-layer>
</ol-map>"
`;

exports[`OpenLayerMapPointViewer > Render correctly 1`] = `
"<ol-map load-tiles-while-animating=\\"true\\" load-tiles-while-interacting=\\"true\\" style=\\"height: 400px;\\">
  <ol-view rotation=\\"0\\" zoom=\\"17\\" projection=\\"EPSG:4326\\"></ol-view>
  <ol-tile-layer>
    <ol-source-osm></ol-source-osm>
  </ol-tile-layer>
  <ol-vector-layer>
    <ol-source-vector>
      <ol-feature>
        <ol-geom-multi-point></ol-geom-multi-point>
        <ol-style>
          <ol-style-circle radius=\\"10\\">
            <ol-style-fill color=\\"white\\"></ol-style-fill>
            <ol-style-stroke color=\\"blue\\" width=\\"4\\"></ol-style-stroke>
          </ol-style-circle>
        </ol-style>
      </ol-feature>
    </ol-source-vector>
  </ol-vector-layer>
</ol-map>"
`;
